[gd_scene load_steps=27 format=2]

[ext_resource path="res://Game/Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Game/Resources/MovePath2D.tres" type="Curve2D" id=2]
[ext_resource path="res://Game/Pictures/Background/1.jpg" type="Texture" id=3]
[ext_resource path="res://Game/Pictures/Background/70.jpg" type="Texture" id=4]
[ext_resource path="res://Game/Pictures/Background/68.jpg" type="Texture" id=5]
[ext_resource path="res://Game/Pictures/Background/77.jpg" type="Texture" id=6]
[ext_resource path="res://Game/Pictures/Background/74.jpg" type="Texture" id=7]
[ext_resource path="res://Game/Pictures/Background/78.jpg" type="Texture" id=8]
[ext_resource path="res://Game/Pictures/Background/69.jpg" type="Texture" id=9]
[ext_resource path="res://Game/Pictures/Background/72.jpg" type="Texture" id=10]
[ext_resource path="res://Game/Resources/Shaders/Screen Blur.tres" type="Material" id=11]
[ext_resource path="res://Game/Pictures/Background/76.jpg" type="Texture" id=12]
[ext_resource path="res://Game/Pictures/Background/67.jpg" type="Texture" id=13]
[ext_resource path="res://Game/Pictures/Background/71.jpg" type="Texture" id=14]
[ext_resource path="res://Game/Pictures/Background/79.jpg" type="Texture" id=15]
[ext_resource path="res://Game/Pictures/Background/73.jpg" type="Texture" id=16]
[ext_resource path="res://Game/Pictures/Background/75.jpg" type="Texture" id=17]
[ext_resource path="res://Game/Scripts/Postprocess.gd" type="Script" id=18]
[ext_resource path="res://Game/Scripts/PathFollow2D.gd" type="Script" id=19]
[ext_resource path="res://Game/Prefabs/HUD.tscn" type="PackedScene" id=20]
[ext_resource path="res://Game/Prefabs/Player.tscn" type="PackedScene" id=21]
[ext_resource path="res://Game/Resources/Shaders/WavesAndCraters.tres" type="Material" id=22]
[ext_resource path="res://Game/Resources/Textures/GroundTexture.tres" type="Texture" id=23]
[ext_resource path="res://Game/Scripts/GroundTexture.gd" type="Script" id=24]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 360, 640 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 500, 400 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Ground" type="CanvasLayer" parent="."]
layer = 0

[node name="Background" type="Node2D" parent="Ground"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="1" type="Sprite" parent="Ground/Background"]
rotation = 1.5708
texture = ExtResource( 3 )

[node name="67" type="Sprite" parent="Ground/Background"]
position = Vector2( 62431.8, -51452.3 )
rotation = 3.33099
texture = ExtResource( 13 )

[node name="68" type="Sprite" parent="Ground/Background"]
position = Vector2( 64159.4, -51029.6 )
rotation = 3.40796
texture = ExtResource( 5 )

[node name="69" type="Sprite" parent="Ground/Background"]
position = Vector2( 65884.4, -50559.1 )
rotation = 3.40796
texture = ExtResource( 9 )

[node name="70" type="Sprite" parent="Ground/Background"]
position = Vector2( 67499.2, -50118.6 )
rotation = 3.40796
texture = ExtResource( 4 )

[node name="71" type="Sprite" parent="Ground/Background"]
position = Vector2( 68107.3, -51364.6 )
rotation = 2.04052
texture = ExtResource( 14 )

[node name="72" type="Sprite" parent="Ground/Background"]
position = Vector2( 69134, -52551.9 )
rotation = 2.41257
texture = ExtResource( 10 )

[node name="73" type="Sprite" parent="Ground/Background"]
position = Vector2( 70449.1, -53748.2 )
rotation = 2.41257
texture = ExtResource( 16 )

[node name="74" type="Sprite" parent="Ground/Background"]
position = Vector2( 71758, -54925.4 )
rotation = 2.41257
texture = ExtResource( 7 )

[node name="75" type="Sprite" parent="Ground/Background"]
position = Vector2( 73086.9, -56112 )
rotation = 2.41257
texture = ExtResource( 17 )

[node name="76" type="Sprite" parent="Ground/Background"]
position = Vector2( 74398.7, -57280.7 )
rotation = 2.41257
texture = ExtResource( 12 )

[node name="77" type="Sprite" parent="Ground/Background"]
position = Vector2( 75298.2, -58702.7 )
rotation = 2.00544
texture = ExtResource( 6 )

[node name="78" type="Sprite" parent="Ground/Background"]
position = Vector2( 76019.6, -60300.5 )
rotation = 2.00544
texture = ExtResource( 8 )

[node name="79" type="Sprite" parent="Ground/Background"]
position = Vector2( 76746.9, -61905.2 )
rotation = 2.00544
texture = ExtResource( 15 )

[node name="GroundLayer" type="Node2D" parent="Ground"]

[node name="AboveGroundLayer" type="Node2D" parent="Ground"]

[node name="GroundViewport" type="Viewport" parent="."]
size = Vector2( 720, 1280 )
handle_input_locally = false
disable_3d = true
render_target_v_flip = true
audio_listener_enable_2d = true

[node name="GroundCamera" type="Camera2D" parent="GroundViewport"]
visible = false
rotating = true
current = true

[node name="MidairLayer" type="Node2D" parent="."]

[node name="PreviewLayer" type="Node2D" parent="."]

[node name="InformationLayer" type="Node2D" parent="."]

[node name="Path2D" type="Path2D" parent="."]
visible = false
curve = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="PathFollow" type="PathFollow2D" parent="Path2D"]
position = Vector2( 62514.4, -51428.5 )
rotation = 0.18029
offset = 110500.0
loop = false
lookahead = 40.0
script = ExtResource( 19 )

[node name="90 degrees" type="Node2D" parent="Path2D/PathFollow"]
rotation = 1.5708

[node name="GroundTexture" type="Sprite" parent="Path2D/PathFollow/90 degrees"]
material = ExtResource( 22 )
z_index = -1
texture = ExtResource( 23 )
script = ExtResource( 24 )

[node name="MainCamera" type="Camera2D" parent="Path2D/PathFollow/90 degrees"]
rotating = true
current = true

[node name="ScreenRect" type="Area2D" parent="Path2D/PathFollow/90 degrees/MainCamera"]
input_pickable = false
monitoring = false
collision_layer = 2048
collision_mask = 0

[node name="ScreenRectShape" type="CollisionShape2D" parent="Path2D/PathFollow/90 degrees/MainCamera/ScreenRect"]
visible = false
shape = SubResource( 1 )

[node name="Postprocess" type="BackBufferCopy" parent="Path2D/PathFollow/90 degrees/MainCamera"]
visible = false
material = ExtResource( 11 )
copy_mode = 2
script = ExtResource( 18 )

[node name="OffscreenPuller" type="Area2D" parent="Path2D/PathFollow/90 degrees"]
position = Vector2( 0, -740 )
input_pickable = false
space_override = 3
gravity = 1000.0
monitoring = false
monitorable = false
collision_layer = 512
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow/90 degrees/OffscreenPuller"]
shape = SubResource( 2 )

[node name="Player" parent="Path2D/PathFollow/90 degrees" instance=ExtResource( 21 )]

[node name="HUD" parent="." instance=ExtResource( 20 )]

[node name="Timer" type="Timer" parent="."]
